// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amd transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  amd: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`bail transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  bail: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`cache transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  cache: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`context transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  context: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`devServer transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  devServer: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`devtool transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  devtool: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`entry transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  entry: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`externals transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  externals: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`merge transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  merge: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`mode transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  mode: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`module transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  module: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`node transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  node: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`optimizations transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  optimizations: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`output transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  output: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`parallelism transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  parallelism: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`performance transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  performance: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`plugins transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  plugins: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`profile transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  profile: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`recordsInputPath transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  recordsInputPath: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`recordsOutputPath transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  recordsOutputPath: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`recordsPath transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  recordsPath: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`resolve transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  resolve: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`resolveLoader transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  resolveLoader: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`splitChunks transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  splitChunks: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`stats transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  stats: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`target transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  target: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`watch transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  watch: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;

exports[`watchOptions transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  watchOptions: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    man: () => duper
  }
};"
`;
